Updated linear gradiant and fixed overflow

--- a/clock/clockCss.css
+++ b/clock/clockCss.css
@@ -3,28 +3,29 @@
 	width: extend-to-zoom;
 }
 body {
-	background: rgb(0, 140, 255);
+	background: linear-gradient(to right, #00b4db, #0083e5);
 	overflow-x: hidden;
 	overflow-y: hidden;
 }
 .window {
 	position: absolute;
 	display: flex;
+	justify-content: center;
+	align-items: center;
 	min-width: 350px;
 	min-height: 400px;
+	top: 0;
+	left: 0;
 	width: 100%;
 	height: 100%;
 }
 .clock {
-	left: 50%;
-	top: 50%;
 	background-color: rgba(255, 255, 255,0.9);
 	position: relative;
 	border: 3px solid black;
 	border-radius: 50%;
 	width: 350px;
 	height: 350px;
-	transform: translate(-50%,-50%);
 }
 .hand {
 	left: 50%;
